# inf5171-243-tp1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  remise.py
data/: colormap.txt
src/: CMakeLists.txt  bench_potential.cpp  colormap.h  experiments.cpp  experiments.h  main.cpp  optparser.cpp  optparser.hpp  particle.cpp  particle.h  potential.cpp  potential.h  potentialparallel.cpp  potentialparallel.h
test/: CMakeLists.txt  test_parallel.cpp  test_potential.cpp
